[package]
name = "rocket_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
passwords = "3.1.16"
serde = { version = "1.0.208", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
